# agent-session-module

./: README.md  demo.py  pyproject.toml
docs/superpowers/specs/: 2026-06-09-session-module-design.md
src/agent_session/: __init__.py  context_window.py  manager.py  models.py
src/agent_session/strategies/: __init__.py  base.py  car.py  chat.py  gui.py  voice.py
tests/: test_context_window.py  test_manager.py  test_models.py  test_strategies.py
