[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-session"
version = "0.1.0"
description = "Generic session lifecycle & context window management for AI agents"
requires-python = ">=3.12"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
